added name in feature1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="arun.css">
 </head>
 <body>
+    <p>Sai Manikanta</p>
     <div class="container">
         <div class="login">
             <form>
